name:                include-env
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unfoldml/include-env
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          example@example.com
copyright:           (c) 2021 Marco Zocca, UnfoldML AB
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.10.4

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     IncludeEnv.TH
  build-depends:       base >= 4.7 && < 5
                     , template-haskell

executable include-env
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , include-env

-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , include-env
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/unfoldml/include-env
